--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
     "lint": "biome check",
     "lint:fix": "biome check --write",
     "format": "biome format --write"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/cors": "^1.4.1",
+    "@elysiajs/swagger": "^1.3.1",
+    "dotenv": "^17.3.1",
+    "drizzle-orm": "^0.45.1",
+    "elysia": "latest",
+    "ioredis": "^5.9.3",
+    "minio": "^8.0.6",
+    "openai": "^6.22.0",
+    "postgres": "^3.4.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "bun-types": "latest"
+    "@types/bun": "^1.3.9",
+    "bun-types": "latest",
+    "drizzle-kit": "^0.31.9"
   },
   "module": "src/index.js"
 }
